custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
clang_use_chrome_plugins=false
is_official_build=true
treat_warnings_as_errors=false
fieldtrial_testing_like_official_build=true
ffmpeg_branding="Chrome"
proprietary_codecs=true
rtc_use_pipewire=false
link_pulseaudio=true
use_gnome_keyring=false
use_sysroot=false
use_custom_libcxx=false
enable_hangout_services_extension=true
enable_widevine=true
use_vaapi=true
enable_nacl=false
enable_swiftshader=false
symbol_level=0
#icu_use_data_file=false
