enable_platform_hevc=true
enable_platform_ac3_eac3_audio=true
enable_platform_mpeg_h_audio=true
enable_platform_dolby_vision=true
enable_mse_mpeg2ts_stream_parser=true
enable_precompiled_headers=false
enable_swiftshader=true
fatal_linker_warnings=false
is_clang=true
is_debug=false
is_component_build=false
is_component_ffmpeg=false
ozone_platform_wayland=true
use_allocator="none"
use_cfi_icall=false
use_cups=true
#use_custom_libcxx=true
use_kerberos=false
use_lld=true
use_ozone=true
use_pulseaudio=true
use_vaapi=true
use_xkbcommon=true
#clang_use_chrome_plugins=true
enable_hangout_services_extension=true
enable_js_type_check=true
enable_nacl_nonsfi=false
exclude_unwind_tables=true
fieldtrial_testing_like_official_build=true

custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
clang_use_chrome_plugins=false
is_official_build=true
chrome_pgo_phase=0
treat_warnings_as_errors=false
fieldtrial_testing_like_official_build=true
ffmpeg_branding="Chrome"
proprietary_codecs=true
rtc_use_pipewire=false
rtc_pipewire_version="0.3"
link_pulseaudio=true
use_gnome_keyring=false
use_sysroot=false
use_custom_libcxx=false
enable_hangout_services_extension=true
enable_widevine=true
enable_nacl=false
symbol_level=0
